--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -69,9 +69,14 @@
                 />
               </div>
               <div class="form-group">
+                <label>Vai trò</label>
+                <input type="text" value="<%= user.vaiTro %>" disabled />
+              </div>
+              <div class="form-group">
                 <label>Email</label>
                 <input type="email" value="<%= user.email %>" disabled />
               </div>
+            
               <div class="form-group">
                 <label>Giới thiệu</label>
                 <textarea name="gioiThieu">
