--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
     <nav class="navbar">
       <ul>
         <li class="active"><a href="/">Trang Chủ</a></li>
+        <li><a href="/learning">Học Tập</a></li>
         <li><a href="/practice">Luyện Tập</a></li>
         <li><a href="/leaderboard">Xếp Hạng</a></li>
         <li><a href="/about">About</a></li>
